--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
-# Auto detect text files and perform LF normalization
+# Set default text file handling for all files
 * text=auto
+
+# Treat .py and .md as UTF-8
+*.py text eol=lf
+*.md text eol=lf
+
+# Normalize shell/batch scripts
+*.sh text eol=lf
+*.bat text eol=crlf
